--- a/google-clone-main/Google project.html
+++ b/google-clone-main/Google project.html
@@ -85,7 +85,7 @@
 
                 </li>
                 <li>
-                    <a href="">Advertising</a>
+                    <a href="">Advertisings</a>
                 </li>
                 <li>
                     <a href="">Business</a>
